<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lmj.a2hm2.MainActivity">
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>
    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/shape_bottombar">
        <LinearLayout
            android:id="@+id/bb_myhome"
            android:gravity="center|bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:id="@+id/ic_myhome"
                android:text="@string/ic_myhome"/>
            <TextView
                android:id="@+id/bb_myhome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="首页"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bb_community"
            android:gravity="center|bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:id="@+id/ic_community"
                android:text="@string/ic_community"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="社区"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="8dp"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bb_msg"
            android:gravity="center|bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:id="@+id/ic_msg"
                android:text="@string/ic_msg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="消息"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bb_my"
            android:gravity="center|bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:id="@+id/ic_my"
                android:text="@string/ic_my"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="我的"
                android:textSize="12dp"/>
        </LinearLayout>
    </LinearLayout>//底部导航
    <LinearLayout
    android:layout_gravity="center|bottom"
    android:gravity="center|bottom"
    android:id="@+id/bb_release"
    android:layout_width="60dp"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:id="@+id/ic_release"
        android:textColor="#FEDB43"
        android:text="@string/ic_release"/>
    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="发布"
        android:textSize="12dp"/>
</LinearLayout>
</FrameLayout>
