<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#eeeeee">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="消息"/>
    </RelativeLayout>//TB
    <RelativeLayout
        android:padding="18dp"
        android:background="#ffffff"
        android:layout_marginBottom="0.5dp"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_marginRight="15dp"
            android:id="@+id/ic_my_msg_leave_msg"
            android:layout_centerVertical="true"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/ic_mag_leave_msg"/>
        <TextView
            android:layout_toRightOf="@+id/ic_my_msg_leave_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="留言"
            android:textColor="#333333"/>
        <TextView
            android:layout_toRightOf="@+id/ic_my_msg_leave_msg"
            android:layout_alignBottom="@+id/ic_my_msg_leave_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="还没有收到留言哦"/>
        <TextView
            android:id="@+id/ic_my_msg_leave_msg_into"
            android:textSize="18dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_my_into"/>
    </RelativeLayout>
    <RelativeLayout
        android:padding="18dp"
        android:background="#ffffff"
        android:layout_marginBottom="0.5dp"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_marginRight="15dp"
            android:id="@+id/ic_my_msg_system_msg"
            android:layout_centerVertical="true"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/ic_msg_system_messages"/>
        <TextView
            android:layout_toRightOf="@+id/ic_my_msg_system_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="系统消息"
            android:textColor="#333333"/>
        <TextView
            android:layout_toRightOf="@+id/ic_my_msg_system_msg"
            android:layout_alignBottom="@+id/ic_my_msg_system_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="系统消息|2天前"/>
        <TextView
            android:id="@+id/ic_my_msg_system_msg_into"
            android:textSize="18dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_my_into"/>
    </RelativeLayout>
</LinearLayout>