<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lmj.a2hm2.My.My_Data">
    <RelativeLayout
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:background="#FEDB43"
        android:id="@+id/my_data_pull_refresh"
        android:layout_width="match_parent"
        android:layout_height="130dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_my_data_back"
            android:textSize="20dp"
            android:text="@string/ic_search_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_my_data_share"
            android:textSize="20dp"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/ic_my_data_QR_Code"
            android:text="@string/ic_my_data_share"/>
        <TextView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_my_data_QR_Code"
            android:textSize="20dp"
            android:text="@string/ic_my_data_QR_Code"/>
        <TextView
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_my_data_upload_background"
            android:textSize="20dp"
            android:text="@string/ic_my_data_upload_background"/>
        <FrameLayout
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/my_data_user_head"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/user_head"/>
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_gravity="bottom|right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ic_my_data_upload_user_head"
                android:textSize="20dp"
                android:text="@string/ic_my_data_upload_user_head"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/my_data_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20dp"/>
        <TextView
            android:layout_below="@+id/my_data_user_name"
            android:id="@+id/my_data_user_last_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="13分钟前来过"/>
        <Button
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="#ffffff"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:id="@+id/my_data_edit_data"
            android:text="编辑资料"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@drawable/shape_bottombar">
        <RelativeLayout
            android:id="@+id/my_data_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_my_data_my"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="我"
                android:textSize="15dp"/>
            <View
                android:id="@+id/my_data_my_view"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_width="50dp"
                android:layout_height="5dp"
                android:layout_marginBottom="1dp"/>
        </RelativeLayout>//我
        <RelativeLayout
            android:id="@+id/my_data_release"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_my_data_release"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="发布"
                android:textSize="15dp"/>
            <View
                android:id="@+id/my_data_release_view"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_width="50dp"
                android:layout_height="5dp"
                android:layout_marginBottom="1dp"/>
        </RelativeLayout>//发布
        <RelativeLayout
            android:id="@+id/my_data_collect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_my_data_collect"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="收藏"
                android:textSize="15dp"/>
            <View
                android:id="@+id/my_data_collect_view"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_width="50dp"
                android:layout_height="5dp"
                android:layout_marginBottom="1dp"/>
        </RelativeLayout>//收藏
        <RelativeLayout
            android:id="@+id/my_data_evaluate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_my_data_evaluate"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="评价"
                android:textSize="15dp"/>
            <View
                android:id="@+id/my_data_evaluate_view"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_width="50dp"
                android:layout_height="5dp"
                android:layout_marginBottom="1dp"/>
        </RelativeLayout>//评价
    </LinearLayout>//导航
    <android.support.v4.view.ViewPager
        android:background="#ffffff"
        android:layout_marginTop="0.3dp"
        android:id="@+id/my_data_viewPage"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
    </android.support.v4.view.ViewPager>
</LinearLayout>
