<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lmj.a2hm2.Release.Release">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:textSize="20dp"
            android:id="@+id/ic_tb_release_cancel"
            android:layout_width="wrap_content"
            android:textColor="#383838"
            android:text="@string/ic_tb_release_cancel"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="发布"/>
        <TextView
            android:layout_alignParentRight="true"
            android:textSize="20dp"
            android:id="@+id/ic_tb_release_more"
            android:layout_width="wrap_content"
            android:text="@string/ic_tb_release_more"
            android:layout_height="wrap_content" />
    </RelativeLayout>//TB
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/goods_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:textColorHint="#eeeeee"
            android:textSize="16dp"
            android:hint="标题" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#eeeeee" />
        <EditText
            android:id="@+id/goods_des"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="16dp"
            android:hint="描述一下你的闲置"
            android:textColorHint="#eeeeee"
            android:background="@null"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <HorizontalScrollView
                android:layout_marginRight="10dp"
                android:scrollbars="none"
                android:visibility="gone"
                android:id="@+id/select_pic_scroll"
                android:layout_width="240dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
            <android.support.v7.widget.RecyclerView

                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/select_pic_recycle"
                />
                </LinearLayout>
            </HorizontalScrollView>
        <LinearLayout
            android:id="@+id/add_picture_linear"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#eeeeee"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/ic_release_add_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/ic_release_add_picture"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#999999"
                android:text="添加图片"/>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="15dp"
        android:background="#ffffff">
        <TextView
            android:id="@+id/text_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="价格"/>
        <EditText
            android:inputType="number"
            android:id="@+id/goods_pri"
            android:layout_toRightOf="@+id/text_value"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="￥0.00"
            android:textColorHint="#eeeeee"/>
    </RelativeLayout>//价格
    <RelativeLayout
        android:id="@+id/release_classify"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="0.5dp"
        android:background="#ffffffff">
        <TextView
            android:id="@+id/text_classify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="分类"/>
        <Spinner
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/text_classify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_release_classify"
            android:entries="@array/classify"
            android:textSize="18dp"/>
    </RelativeLayout>//分类
    <Button
        android:id="@+id/goods_commit"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="确定发布"
        android:textColor="#ffffff"
        android:background="#ff4443"/>

</LinearLayout>
