<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lmj.a2hm2.Myhome.Goods_Item">
    <RelativeLayout
        android:id="@+id/tb"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_goods_item_back"
            android:textSize="20dp"
            android:text="@string/ic_search_back"/>
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="宝贝详情"/>
        <TextView
            android:layout_toLeftOf="@+id/ic_goods_item_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_goods_item_share"
            android:textSize="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/ic_my_data_share"/>
        <TextView
            android:layout_alignParentRight="true"
            android:textSize="20dp"
            android:id="@+id/ic_goods_item_more"
            android:layout_width="wrap_content"
            android:text="@string/ic_tb_release_more"
            android:layout_height="wrap_content" />
    </RelativeLayout>TB
    <ScrollView
        android:layout_below="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:padding="10dp"
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/goods_item_userHead"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/user_head"/>
                <TextView
                    android:id="@+id/goods_item_userName"
                    android:layout_toRightOf="@+id/goods_item_userHead"
                    android:textColor="#333333"
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/goods_item_time"
                    android:layout_alignBottom="@+id/goods_item_userHead"
                    android:layout_toRightOf="@+id/goods_item_userHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/goods_item_value"
                    android:textSize="18dp"
                    android:textColor="#ff4444"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/goods_item_content"
                    android:layout_below="@+id/goods_item_userHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.example.lmj.a2hm2.MyView.MyGridView
                    android:layout_below="@+id/goods_item_content"
                    android:id="@+id/goods_item_goods_download_pic"
                    android:numColumns="auto_fit"
                    android:columnWidth="90dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </com.example.lmj.a2hm2.MyView.MyGridView>
                <View
                    android:id="@+id/view"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/goods_item_goods_download_pic"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#eeeeee"/>
                <TextView
                    android:id="@+id/goods_item_thumb_up_num"
                    android:layout_toLeftOf="@+id/goods_item_browse_num"
                    android:layout_marginRight="5dp"
                    android:layout_below="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/goods_item_browse_num"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="浏览620"/>
            </RelativeLayout>
            <LinearLayout
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="15dp"
                    android:textColor="#333333"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="热门留言(11)"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/goods_item_comments_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>//热门留言
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="猜你喜欢"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/goods_item_guess_you_like_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <LinearLayout
            android:id="@+id/goods_item_comment"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_comments"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="留言"/>
        </LinearLayout>//留言
        <LinearLayout
            android:id="@+id/goods_item_thumb_up"
            android:layout_toRightOf="@+id/goods_item_comment"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_thumb_up"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="点赞"/>
        </LinearLayout>//点赞
        <TextView
            android:id="@+id/goods_item_want"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:background="#fe4543"
            android:text="我想要"/>
    </RelativeLayout>BB
</RelativeLayout>
